# ripple-vue

./: components.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.vue  Routers.ts  Store.ts  main.ts  style.css
src-tauri/: .env  Cargo.toml  mod.rs  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: att_rel.rs  attachment.rs  book.rs  book_volume.rs  chapter.rs  character.rs  lib.rs  prelude.rs  set.rs
src-tauri/migration/: migrate.sh
src-tauri/migration/src/: lib.rs  m20230105_010128_create_table.rs  main.rs
src-tauri/src/: main.rs
src-tauri/src/command/: attachment.rs  book.rs  chapter.rs  env.rs  mod.rs
src-tauri/src/common/: env_info.rs  mod.rs  page.rs
src-tauri/src/db/: mod.rs
src-tauri/src/util/: env.rs  file.rs  init.rs  mod.rs  resolve.rs
src/api/: file.ts  request.ts
src/assets/css/: editor.css
src/components/book/: BookEdit.vue  BookItem.vue  Index.vue
src/components/chapter/: ChapterEdit.vue  Index.vue
src/components/common/editor/: Editor.vue  EditorFooter.vue  Index.vue  MenuBar.vue  MenuItem.vue
src/components/home/: Index.vue
src/types/: model.ts
