[package]
name = "ripple"
version = "0.0.1"
description = "A Novel Set App"
authors = ["mtaech"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

[workspace]
members = [".","migration","entity"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["devtools", "dialog-all", "fs-all", "path-all", "protocol-asset", "shell-open"] }
tauri-utils = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
fern = {version = "0.6.1",features = ["chrono","colored","date-based"] }
chrono = "0.4.23"
sea-orm = {version = "0.10.5",features= ["sqlx-sqlite","runtime-tokio-native-tls","macros"] }
migration = {path="migration"}
entity = {path = "entity"}
nanoid = "0.4.0"
once_cell = "1"
rust-embed = "6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
